feat: Vercel deploy setup — BASE URL env, SPA routing, .gitignore, interview.js, all source updates